# liveos-community

./: .coverage-thresholds.json  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md  SERVICE-INVENTORY.md  pyproject.toml
.beads/knowledge/: anti-patterns.jsonl  api-behaviors.jsonl  codebase-facts.jsonl  decisions.jsonl  facts.jsonl  gotchas.jsonl  patterns.jsonl
.claude/commands/: brainstorm.md  pr-shepherd.md  prime.md  review-design.md  self-reflect.md  start.md
.metaswarm/: external-tools.yaml  project-profile.json
docs/: architecture.md  clawhub.md  open-core-boundary.md
examples/: sample_events.jsonl  sample_transcript.txt
liveos_community/: __init__.py  cli.py  demo.py  douyin_public_screen.py  events.py  interfaces.py  report.py
scripts/: beads-fetch-conversation-history.ts  beads-fetch-pr-comments.ts  install_dev.ps1  run_demo.ps1
skills/liveos-community/: SKILL.md
tests/: test_cli.py  test_demo.py  test_events.py  test_report.py
