[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "liveos-community"
version = "0.1.0"
description = "Open-core demo toolkit for live-commerce public-screen monitoring and report generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zhujiu Community" }]
dependencies = []

[project.optional-dependencies]
browser = ["playwright>=1.48"]
dev = ["pytest>=8", "pytest-cov>=5"]

[project.scripts]
liveos-community = "liveos_community.cli:main"

[tool.setuptools.packages.find]
include = ["liveos_community*"]

[tool.coverage.run]
source = ["liveos_community"]
branch = true

